Fix star background hidden by home screen background

--- a/css/home.css
+++ b/css/home.css
@@ -20,7 +20,7 @@ html, body {
   box-sizing: border-box;
   overflow: hidden;
   padding: 0;
-  background-color: #000;
+  background-color: transparent;
   color: #fff;
 }
 
